2003-03-04  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>

	* gcov-io.h (gcov_save_position, gcov_reserve_length, gcov_resync,
	gcov_skip, gcov_skip_string, gcov_write_unsigned, gcov_write_counter,
	gcov_write_string, gcov_read_unsigned, gcov_read_counter,
	gcov_read_string, gcov_write_length): Modified to enable reading/
	writing of whole .da file just once.
	(da_file_open, da_file_close, da_file_eof, da_file_error,
	da_file_position, da_file_seek, da_file_write, da_file_read): New
	functions.
	(actual_da_file, actual_da_file_position, actual_da_file_length,
	actual_da_file_buffer, actual_da_file_buffer_size): New static
	functions.
	* libgcov.c (gcov_exit): Modified to read/write the whole .da file at
	just once.


2003-03-04  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.c (m68k_output_function_prologue): Fix CFA
	offset without frame pointer.

2003-03-04  Steve Ellcey  <sje@cup.hp.com>

	* expr.c (expand_expr): Call promote_mode to set unsignedp.

2003-03-04  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Don't always define TARGET_SYSTEM_ROOT.
	* configure: Regenerated.
	* gcc.c: Check whether TARGET_SYSTEM_ROOT is defined.

2003-03-04  Andreas Jaeger  <aj@suse.de>

	* configure.in: Check for <memcheck.h>.
        * configure: Regenerated.

	* config.in: Define HAVE_MEMCHECK_H.

	* ggc-common.c: Use <memcheck.h> if available instead of
	<valgrind.h>.
	* ggc-page.c: Likewise.
	* cppfiles.c: Likewise.

2003-03-04  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (*extzv_8_8): Fix cc and lengths.

2003-03-04  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR c/9262
	* c-typeck.c (do_case): Attach the first case label to the SWITCH_BODY.
	(c_finish_case): Rechain the next statements to the SWITCH_STMT.

Tue Mar  4 11:30:04 CET 2003  Jan Hubicka  <jh@suse.cz>

	* doc/invoke.texi:  Document that unit-at-a-time is enabled for -O3
	* toplev.c (parse_options_and_default_flags): Enable flag_unit_at_a_time
	for -O3.
